--- a/.github/workflows/helios-deploy.yml
+++ b/.github/workflows/helios-deploy.yml
@@ -30,13 +30,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
 
       - name: Install Nikola and Node deps
         run: |
           python -m pip install --upgrade pip
           pip install "nikola[extras]"
-          npm ci
+          npm install --no-audit --no-fund
 
       - name: Build CSS with PostCSS
         run: |
